{
    "name": "DefaultAction",
    "maps": [
        {
            "name": "PlayerMove",
            "id": "8e413648-ec3c-492a-bb17-c19a9634f64a",
            "actions": [
                {
                    "name": "UpDown",
                    "type": "PassThrough",
                    "id": "806f4903-efc5-4aae-95d8-fb8ce92ccb4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "PassThrough",
                    "id": "ba314188-4cf2-4e13-8a7c-72dd538fffd3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "b783ec76-3bb9-41f1-b0e9-ad3430bdf719",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9c9f4c5b-f1a7-432e-84b1-3370092539a0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3b5ba921-3c68-497f-8f23-b40ec48a2398",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d04c8bb8-8e21-48bf-ba67-831f2e92ac43",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}